fix: カメラオフセット + ソウルツリー致命バグ修正 + UI 強化 + 素材投入
マルチエージェント先行調査 (bug-hunter ×2 + general-purpose) の結果に基づき UI/UX バグを修正。

## Phase 1 マルチエージェント調査の主要発見

- **致命的バグ**: DddGame.loadFromSave で SoulTree.applyTo が二重適用される
  (補正済 Stats/Deck/SkillSlot を保存しているのに復元側でも applyTo を呼び、
   HP/カード/スキル枠が無限累積する) — Agent C 発見
- ソウルツリー「一個飛び解放」は座標的に不可能。実体は: unlock 直後に child ノードが
  シルエット→可視に切り替わるのを誤認 + tryUnlockAt が「最初ヒット即解放」のため
  シルエットノードが先にヒットすると可視ノードを無視する潜在バグ — Agent B 発見
- DungeonScreen のカメラ Y オフセット欠落で HUD パネル分プレイヤーが下にずれる
  (下1マス/上3マスの偏り) — Agent A 確認

## Phase 2 素材配置

- C:\Users\nayud\Downloads\ste\*.png を assets\icons\stats\ にリネームコピー
  (HP.png→hp.png、power.png→phys_atk.png、power-difence.png→phys_def.png 等、
   NodeIconPathResolver の規約名に統一)

## Phase 3 カメラ中央配置バグ修正

- RenderLayout に HUD_BOTTOM_PANEL_HEIGHT = 300 を追加
- DungeonScreen.updateMapCamera で camera.position.y を HUD パネル分上にシフト
  (zoom 0.5 で -75 world unit、プレイヤーが可視範囲 Y=300〜1080 の中央 690 に表示)

## Phase 4 ソウルツリーノードアイコン分岐配線

- SoulTreeScreen の単一 nodeTexture を Map<NodeId, Texture> + fallbackNodeTexture に置換
- show() で SoulTree.allNodes() を巡回し NodeIconPathResolver.resolve(effect) で
  アイコンパス取得、各 Texture を自前ロード
- CardGrant ノードは CardImageRegistry から都度参照 (二重解放回避のため本マップに入れない)
- render() で nodeIconFor(id, effect) を引いて per-node 描画
- dispose() で全 Texture + fallback + 確認ダイアログ解放

## Phase 5 一個飛び解放バグ修正

- SoulTreeScreen.positions() を HashMap → LinkedHashMap + Collections.unmodifiableMap
  (挿入順保持、tryUnlockAt のイテレーションを決定的化)
- tryUnlockAt を「最初ヒットで即解放」→「最近傍の可視ノードを採用 + ダイアログ起動」に
  全面書換 (シルエットは候補から除外、隣接ノードが重なっても誤判定なし)

## Phase 6 SoulNodeUnlockDialog (確認モーダル新規)

- core/presentation/window/SoulNodeUnlockDialog.java 新設 (~170 行)
- Y で解放 / N or ESC でキャンセル、ソウル不足時は確定不可
- CardGrant ノードはカード画像を 240×336 大表示、それ以外はアイコン 200×200
- Optional<Boolean> consume() API (NodeChoicePopup 同型)
- SoulTreeScreen に pendingUnlock/pendingUnlockId フィールド統合
- handleCameraInput/handlePointer/handleInput をモーダル中スキップ
- renderAndConsumeUnlockDialog でダイアログ描画 + 結果消費 + unlock 実行 + ローカライズ
  フラッシュ (「ソウルが不足し